--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,13 +25,14 @@ jobs:
     deploy:
         environment:
             name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
+            url: ${{ steps.deployment.outputs.page_url }} # TODO: switch this actions/deploy-pages#73
+            
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
               uses: actions/checkout@v3
             - name: Setup Pages
-              uses: actions/configure-pages@v2
+              uses: actions/configure-pages@v2.1.2
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v1
               with:
@@ -39,4 +40,5 @@ jobs:
                   path: "./public/"
             - name: Deploy to GitHub Pages
               id: deployment
-              uses: actions/deploy-pages@v1
+              uses: actions/deploy-pages@v1.2.2
+              
