--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,7 +25,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }} # TODO: switch this actions/deploy-pages#73
+      url: ${{ steps.deployment.outputs.page_url }} # TODO: switch this (actions/deploy-pages#73)
 
     runs-on: ubuntu-latest
     steps:
